Try denying Unsafe access with LWJGL 3.4.2. Yay!
It works fine!